[gd_scene load_steps=14 format=2]

[ext_resource path="res://Producer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shop.gd" type="Script" id=2]
[ext_resource path="res://candy_small.png" type="Texture" id=3]
[ext_resource path="res://bill.png" type="Texture" id=4]
[ext_resource path="res://Fiat.gd" type="Script" id=5]
[ext_resource path="res://shop.png" type="Texture" id=6]
[ext_resource path="res://Owner.tscn" type="PackedScene" id=7]
[ext_resource path="res://government.png" type="Texture" id=8]
[ext_resource path="res://chocolate_small.png" type="Texture" id=9]
[ext_resource path="res://Government.gd" type="Script" id=10]
[ext_resource path="res://Globals.gd" type="Script" id=11]
[ext_resource path="res://TraderPerson.tscn" type="PackedScene" id=12]
[ext_resource path="res://Factory.tscn" type="PackedScene" id=13]

[node name="Fiat" type="Node2D"]
script = ExtResource( 5 )

[node name="ProduceButton" type="Button" parent="."]
margin_left = 528.0
margin_top = 16.0
margin_right = 592.0
margin_bottom = 40.0
text = "Produce"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateMoney" type="Button" parent="."]
margin_left = 600.0
margin_top = 16.0
margin_right = 701.0
margin_bottom = 40.0
text = "Create money"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveGovMoneyButton" type="Button" parent="."]
margin_left = 712.0
margin_top = 16.0
margin_right = 827.0
margin_bottom = 40.0
text = "Give gov money"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsumeAndTradeButton" type="Button" parent="."]
margin_left = 528.0
margin_top = 112.0
margin_right = 697.0
margin_bottom = 136.0
text = "Consume and trade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculatePrices" type="Button" parent="."]
margin_left = 528.0
margin_top = 48.0
margin_right = 641.0
margin_bottom = 72.0
text = "Calculate prices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculateTrade" type="Button" parent="."]
margin_left = 648.0
margin_top = 48.0
margin_right = 761.0
margin_bottom = 72.0
text = "Calculate trade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculateConsumption" type="Button" parent="."]
margin_left = 528.0
margin_top = 80.0
margin_right = 686.0
margin_bottom = 104.0
text = "Calculate consumption"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Producer1" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 192 )
_shop_node_path = NodePath("../Shop")
_government_node_path = NodePath("../CivilServant")

[node name="Producer2" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 192 )
_shop_node_path = NodePath("../Shop")
_government_node_path = NodePath("../CivilServant")
_produced_product_type = "Chocolate"
_product_texture = ExtResource( 9 )

[node name="Shop" type="Sprite" parent="."]
position = Vector2( 48, 584 )
texture = ExtResource( 6 )
script = ExtResource( 2 )
_factory_node_path_1 = NodePath("../Producer1")
_factory_node_path_2 = NodePath("../Producer2")
_government_node_path = NodePath("../CivilServant")

[node name="TaxIncludedPricesLabel" type="Label" parent="Shop"]
margin_left = -8.0
margin_top = 136.0
margin_right = 116.0
margin_bottom = 167.0
text = "Prices Tax Included
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChocolateTaxIncludedPriceLabel" type="Label" parent="Shop/TaxIncludedPricesLabel"]
margin_left = 72.0
margin_top = 56.0
margin_right = 98.0
margin_bottom = 75.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chocolate" type="Sprite" parent="Shop/TaxIncludedPricesLabel/ChocolateTaxIncludedPriceLabel"]
position = Vector2( -16, 8 )
texture = ExtResource( 9 )

[node name="Bill" type="Sprite" parent="Shop/TaxIncludedPricesLabel/ChocolateTaxIncludedPriceLabel"]
position = Vector2( 37.5, 5.5 )
texture = ExtResource( 4 )

[node name="CandyTaxIncludedPriceLabel" type="Label" parent="Shop/TaxIncludedPricesLabel"]
margin_left = 72.0
margin_top = 32.0
margin_right = 98.0
margin_bottom = 51.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Candy" type="Sprite" parent="Shop/TaxIncludedPricesLabel/CandyTaxIncludedPriceLabel"]
position = Vector2( -16, 8 )
texture = ExtResource( 3 )

[node name="Bill" type="Sprite" parent="Shop/TaxIncludedPricesLabel/CandyTaxIncludedPriceLabel"]
position = Vector2( 37.5, 5.5 )
texture = ExtResource( 4 )

[node name="PricesLabel" type="Label" parent="Shop"]
margin_left = -8.0
margin_top = 64.0
margin_right = 32.0
margin_bottom = 78.0
text = "Prices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CandyPriceLabel" type="Label" parent="Shop/PricesLabel"]
margin_left = 74.5
margin_top = 18.5
margin_right = 100.5
margin_bottom = 37.5
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Candy" type="Sprite" parent="Shop/PricesLabel/CandyPriceLabel"]
position = Vector2( -16, 8 )
texture = ExtResource( 3 )

[node name="Bill" type="Sprite" parent="Shop/PricesLabel/CandyPriceLabel"]
position = Vector2( 37.5, 5.5 )
texture = ExtResource( 4 )

[node name="ChocolatePriceLabel" type="Label" parent="Shop/PricesLabel"]
margin_left = 74.5
margin_top = 42.5
margin_right = 100.5
margin_bottom = 61.5
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chocolate" type="Sprite" parent="Shop/PricesLabel/ChocolatePriceLabel"]
position = Vector2( -16, 8 )
texture = ExtResource( 9 )

[node name="Bill" type="Sprite" parent="Shop/PricesLabel/ChocolatePriceLabel"]
position = Vector2( 37.5, 5.5 )
texture = ExtResource( 4 )

[node name="Chocolate" type="Sprite" parent="Shop"]
position = Vector2( 32, 8 )
texture = ExtResource( 9 )

[node name="ChocolatesInMarketLabel" type="Label" parent="Shop/Chocolate"]
margin_left = 16.0
margin_top = -8.0
margin_right = 42.0
margin_bottom = 11.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Candies" type="Sprite" parent="Shop"]
position = Vector2( 32, -16 )
texture = ExtResource( 3 )

[node name="CandiesInMarketLabel" type="Label" parent="Shop/Candies"]
margin_left = 16.0
margin_top = -8.0
margin_right = 42.0
margin_bottom = 11.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bill" type="Sprite" parent="Shop"]
position = Vector2( 88, 0 )
texture = ExtResource( 4 )

[node name="MoneyInMarketLabel" type="Label" parent="Shop/Bill"]
margin_left = 16.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 6.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CivilServant" type="Node2D" parent="."]
position = Vector2( 352, 768 )
script = ExtResource( 10 )

[node name="TraderPerson" parent="CivilServant" instance=ExtResource( 12 )]
position = Vector2( 64, -56 )
_shop_node_path = NodePath("../../Shop")
_government_node_path = NodePath("../../CivilServant")
_production_rate = 0.0

[node name="Globals" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Government" type="Sprite" parent="."]
position = Vector2( 728, 568 )
texture = ExtResource( 8 )

[node name="Owner" parent="Government" instance=ExtResource( 7 )]
position = Vector2( 64, 64 )

[node name="GiveMoneyButton" type="Button" parent="Government"]
margin_left = 56.0
margin_top = -88.0
margin_right = 97.0
margin_bottom = -68.0
text = "Give money"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyToGiveSpinBox" type="SpinBox" parent="Government/GiveMoneyButton"]
margin_left = 136.0
margin_right = 210.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bill" type="Sprite" parent="Government/GiveMoneyButton/MoneyToGiveSpinBox"]
position = Vector2( -24, 8 )
texture = ExtResource( 4 )

[node name="InvestMoneyButton" type="Button" parent="Government"]
margin_left = 136.0
margin_top = 72.0
margin_right = 236.0
margin_bottom = 96.0
text = "Invest money"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyToInvestInCandiesSpinBox" type="SpinBox" parent="Government/InvestMoneyButton"]
margin_left = 144.0
margin_top = -24.0
margin_right = 218.0
suffix = "€"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="candy_small" type="Sprite" parent="Government/InvestMoneyButton/MoneyToInvestInCandiesSpinBox"]
position = Vector2( -24, 8 )
texture = ExtResource( 3 )

[node name="bill" type="Sprite" parent="Government/InvestMoneyButton/MoneyToInvestInCandiesSpinBox"]
position = Vector2( 96, 8 )
texture = ExtResource( 4 )

[node name="MoneyToInvestInChocolatesSpinBox" type="SpinBox" parent="Government/InvestMoneyButton"]
margin_left = 144.0
margin_top = 16.0
margin_right = 218.0
margin_bottom = 40.0
suffix = "€"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chocolate_small" type="Sprite" parent="Government/InvestMoneyButton/MoneyToInvestInChocolatesSpinBox"]
position = Vector2( -24, 16 )
texture = ExtResource( 9 )

[node name="bill" type="Sprite" parent="Government/InvestMoneyButton/MoneyToInvestInChocolatesSpinBox"]
position = Vector2( 96, 8 )
texture = ExtResource( 4 )

[node name="SellProductsButton" type="Button" parent="Government"]
margin_left = 136.0
margin_top = -16.0
margin_right = 236.0
margin_bottom = 8.0
text = "Sell products"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CandiesToSellSpinBox" type="SpinBox" parent="Government/SellProductsButton"]
margin_left = 144.0
margin_top = -24.0
margin_right = 218.0
suffix = "€"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="candy_small" type="Sprite" parent="Government/SellProductsButton/CandiesToSellSpinBox"]
position = Vector2( -24, 8 )
texture = ExtResource( 3 )

[node name="candy_small2" type="Sprite" parent="Government/SellProductsButton/CandiesToSellSpinBox"]
position = Vector2( 96, 8 )
texture = ExtResource( 3 )

[node name="chocolate_small" type="Sprite" parent="Government/SellProductsButton/CandiesToSellSpinBox"]
position = Vector2( 88, 48 )
texture = ExtResource( 9 )

[node name="ChocolatesToSellSpinBox" type="SpinBox" parent="Government/SellProductsButton"]
margin_left = 144.0
margin_top = 16.0
margin_right = 218.0
margin_bottom = 40.0
suffix = "€"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chocolate_small" type="Sprite" parent="Government/SellProductsButton/ChocolatesToSellSpinBox"]
position = Vector2( -24, 16 )
texture = ExtResource( 9 )

[node name="TaxRateSpinBox" type="SpinBox" parent="Government"]
margin_left = -56.0
margin_top = -88.0
margin_right = 18.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaxRateLabel" type="Label" parent="Government/TaxRateSpinBox"]
margin_left = -56.0
margin_right = -6.0
margin_bottom = 14.0
text = "Tax rate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Factory" parent="Government" instance=ExtResource( 13 )]
position = Vector2( -64, 120 )
[connection signal="pressed" from="ProduceButton" to="Producer1" method="_on_ProduceButton_pressed"]
[connection signal="pressed" from="ProduceButton" to="Producer2" method="_on_ProduceButton_pressed"]
[connection signal="pressed" from="CreateMoney" to="CivilServant" method="_on_CreateMoney_pressed"]
[connection signal="pressed" from="GiveGovMoneyButton" to="CivilServant" method="_on_CreateMoney_pressed"]
[connection signal="pressed" from="ConsumeAndTradeButton" to="Producer1" method="_on_SendProductsToMarketButton_pressed"]
[connection signal="pressed" from="ConsumeAndTradeButton" to="Producer2" method="_on_SendProductsToMarketButton_pressed"]
[connection signal="pressed" from="CalculatePrices" to="Shop" method="_on_CalculatePrices_pressed"]
[connection signal="pressed" from="CalculateTrade" to="Shop" method="_on_CalculatePrices_pressed"]
[connection signal="pressed" from="CalculateConsumption" to="Shop" method="_on_CalculatePrices_pressed"]
[connection signal="signal_tax_rate_changed" from="Globals" to="CivilServant" method="_on_Globals_signal_tax_rate_changed"]
[connection signal="pressed" from="Government/GiveMoneyButton" to="CivilServant" method="_on_Buy_pressed"]
[connection signal="pressed" from="Government/InvestMoneyButton" to="CivilServant" method="_on_Buy_pressed"]
[connection signal="pressed" from="Government/SellProductsButton" to="CivilServant" method="_on_Buy_pressed"]
